--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <video autoplay="True" loop="True" muted src="resources/videos/excursion.mp4" type="video/mp4"></video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers plasces you like, and recommends new points of interest around you.</h4>
+    <p><img src="resources/images/camp.webp" alt="Photo showing a camp in the night"></p>
+    <p><img src="resources/images/phone.webp" alt="Phone icon"></p>
+    <h2 class="header--sub-header">Coming Soon for iPhone and Android</h2>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
