--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p><img src="resources/images/phone.webp" alt="Phone icon"></p>
     <h2 class="header--sub-header">Coming Soon for iPhone and Android</h2>
     <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
 </body>
 </html>
